Including test suite

--- a/src/main/webapp/WEB-INF/message_pt.properties
+++ b/src/main/webapp/WEB-INF/message_pt.properties
@@ -1,8 +1,8 @@
-field.required = Campo obrigatório.
-field.required.product.title = O título deve ser preenchido.
-field.required.product.description = Descrição deve ser preenchido.
-field.required.product.pages = Páginas deve ser preenchido.
-typeMismatch = O tipo é inválido.
+field.required = Campo obrigatÃ³rio.
+field.required.product.title = O tÃ­tulo deve ser preenchido.
+field.required.product.description = DescriÃ§Ã£o deve ser preenchido.
+field.required.product.pages = PÃ¡ginas deve ser preenchido.
+typeMismatch = O tipo Ã© invÃ¡lido.
 
 nav.category.home = Home
 nav.category.agile = Agilidade
@@ -14,6 +14,6 @@ nav.category.webdevelopment = Desenvolvimento Web
 nav.category.others = Outros
 
 menu.cart = Seu Carrinho ({0})
-menu.about = Sobre Nós
-menu.en = Inglês
-menu.pt = Português
+menu.about = Sobre NÃ³s
+menu.en = InglÃªs
+menu.pt = PortuguÃªs
